--- a/application.yml
+++ b/application.yml
@@ -32,10 +32,8 @@ spring:
 
 spring:
   datasource:
-    driver-class-name: com.h2.Driver
+    platform: hsqldb
     url: jdbc:h2:mem:issuetracker
-    username: sa
-    password: 
   jpa:
    show-sql: true
    hibernate.ddl-auto: update
